--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,28 +1,28 @@
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-around;
     padding: 16px;
     box-shadow: 0 1px 3px -2px black;
-}
-
-.nav-logo{
+  }
+  
+  .nav-logo {
     display: flex;
     align-items: center;
     gap: 10px;
-}
-
-.nav-logo p {
+  }
+  
+  .nav-logo p {
     color: #000;
     font-weight: 600;
     font-size: 38px;
-}
-
-.nav-logo a{
+  }
+  
+  .nav-logo a {
     text-decoration: none;
     color: inherit;
-}
-
-.nav-menu{
+  }
+  
+  .nav-menu {
     display: flex;
     align-items: center;
     list-style-type: none;
@@ -31,53 +31,60 @@
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
-}
-
-.nav-menu li{
+  }
+  
+  .nav-menu li {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 3px;
-}
-
-.nav-menu hr{
+    position: relative;
+  }
+  
+  .nav-menu hr {
     border: none;
-    width: 80%;
+    width: 0;
     height: 3px;
     border-radius: 10px;
     background: #FFD700;
-}
-
-.nav-menu a{
+    transition: width 0.3s ease-in-out;
+  }
+  
+  .nav-menu li.active hr,
+  .nav-menu li:hover hr {
+    width: 80%;
+  }
+  
+  .nav-menu a {
     text-decoration: none;
     color: inherit;
   }
-
-.nav-login-start{
+  
+  .nav-login-start {
     display: flex;
     align-items: center;
     gap: 45px;
-}
-
-.nav-login-start button{
+  }
+  
+  .nav-login-start button {
     width: 157px;
     height: 58px;
     outline: none;
-    border: 1px solid #7a7a7a;
+    border: .5px solid #7a7a7a;
     border-radius: 75px;
     color: #515151;
     font-size: 20px;
     font-weight: 500;
     background-color: white;
     cursor: pointer;
-}
-
-.nav-login-start button:active{
+  }
+  
+  .nav-login-start button:active {
     background: #f3f3f3;
-}
-
-.nav-cart-count{
+  }
+  
+  .nav-cart-count {
     width: 22px;
     height: 22px;
     display: flex;
@@ -89,5 +96,9 @@
     font-size: 14px;
     background: red;
     color: white;
-}
-
+  }
+  
+  .nav-login-start button:hover {
+    background: #f3f3f3;
+    border-color: #f3f3f3;
+  }
