--- a/frontend/src/Components/CartItems/CartItem.css
+++ b/frontend/src/Components/CartItems/CartItem.css
@@ -62,11 +62,14 @@
 .cart-item-quantity {
     width: 64px;
     height: 50px;
-    border:
-    2px solid #ebebeb;
+    border: 2px solid #ebebeb;
     background: white;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .cart-item-quantity:hover {
     background: white;  
